# trout

./: .gitignore  README.md  pyproject.toml
src/eval/diffuseDistributions/configs/fictitious-people/: llama-2-13b.yaml
src/eval/diffuseDistributions/src/: evaluate.py
src/eval/diversityTuning/scripts_dataset_cleaner/: 0_data_prep_scoring.py  1_data_prep_filtering.py
src/eval/diversityTuning/scripts_eval/: generation_eval1_1.py
src/trout/: metrics.py
src/trout/eval/diffuseDistributions/: README.md
src/trout/eval/diffuseDistributions/src/: evaluate.py  generate.py  search.py  train.py
src/trout/eval/diversityTuning/: evaluate.py  generate.py
src/trout/eval/diversityTuning/adhoc/: 052225_hf_generate.py
src/trout/eval/diversityTuning/models/: __init__.py  diversity_model.py  generation_model.py  utils.py
src/trout/eval/diversityTuning/scripts/: run_llama3-8b-instruct.sh  run_llama31-8b-instruct.sh  run_qwen3-8b.sh
src/trout/eval/diversityTuning/scripts_dataset_cleaner/: 0_data_prep_scoring.py  1_data_prep_filtering.py
src/trout/eval/diversityTuning/scripts_eval/: generation_eval1_1.py  generation_eval1_2.py  generation_eval2.py
src/trout/eval/diversityTuning/scripts_reward_modeling/: reward_model_train.py
src/trout/eval/hivemind/: evaluate.py
src/trout/eval/hivemind/scripts/: run_llama3-8b-instruct.sh  run_llama31-8b-instruct.sh  run_qwen25-7b-instruct.sh  run_qwen3-8b.sh
src/trout/utils/: chat_models.py  chat_models_old.py  chat_models_ray.py
src/utils/: chat_models.py  openai_utils.py
(+85 files in other folders)
