[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trout"
version = "0.1.0"
description = "improving diversity of LM outputs"
authors = [
  { name = "Raymond Fok", email = "rayfok@cs.washington.edu" }
]
requires-python = ">=3.11"
dependencies = [
  "datasets==3.6.0",
  "transformers==4.52.2",
  "peft==0.15.2",
  "evaluate==0.4.3",
  "sentence-transformers==4.1.0",
  "trl==0.17.0",
  "openai==1.81.0",
  "anthropic==0.51.0",
  "together==1.5.8",
  "hf-transfer==0.1.9",
  "tqdm==4.67.1",
  "sentencepiece==0.2.0",
  "accelerate==1.7.0",
  "einops==0.8.1",
  "omegaconf==2.3.0"
]

[tool.setuptools.packages.find]
where = ["src"]